@@ -6,23 +6,21 @@
  */
 package com.powsybl.sld.cgmes.dl.conversion;
 
+import com.powsybl.cgmes.model.CgmesNamespace;
+import com.powsybl.iidm.network.TopologyKind;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.DiagramPoint;
+import com.powsybl.triplestore.api.PropertyBag;
+import com.powsybl.triplestore.api.TripleStore;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import com.powsybl.sld.cgmes.dl.iidm.extensions.DiagramPoint;
-import com.powsybl.cgmes.model.CgmesNamespace;
-import com.powsybl.iidm.network.TopologyKind;
-import com.powsybl.triplestore.api.PropertyBag;
-import com.powsybl.triplestore.api.TripleStore;
-
 /**
- *
  * @author Massimo Ferraro {@literal <massimo.ferraro@techrain.eu>}
  */
 public abstract class AbstractDiagramDataExporter {
@@ -41,7 +39,7 @@ public abstract class AbstractDiagramDataExporter {
     protected String addDiagramObject(String id, String name, double rotation, String diagramObjectStyleId, String diagramId) {
         PropertyBag diagramObjectProperties = new PropertyBag(Arrays.asList(CgmesDLModel.IDENTIFIED_OBJECT_NAME, CgmesDLModel.IDENTIFIED_OBJECT, "rotation", CgmesDLModel.DIAGRAM, CgmesDLModel.DIAGRAM_OBJECT_STYLE), true);
         diagramObjectProperties.setResourceNames(Arrays.asList(CgmesDLModel.IDENTIFIED_OBJECT, CgmesDLModel.DIAGRAM, CgmesDLModel.DIAGRAM_OBJECT_STYLE));
-        diagramObjectProperties.setClassPropertyNames(Arrays.asList(CgmesDLModel.IDENTIFIED_OBJECT_NAME));
+        diagramObjectProperties.setClassPropertyNames(List.of(CgmesDLModel.IDENTIFIED_OBJECT_NAME));
         diagramObjectProperties.put(CgmesDLModel.IDENTIFIED_OBJECT_NAME, name);
         diagramObjectProperties.put(CgmesDLModel.IDENTIFIED_OBJECT, id);
         diagramObjectProperties.put("rotation", Double.toString(rotation));
@@ -52,40 +50,40 @@ public abstract class AbstractDiagramDataExporter {
 
     protected void addDiagramObjectPoint(String diagramObjectId, DiagramPoint point) {
         PropertyBag diagramObjectPointProperties = new PropertyBag(Arrays.asList(CgmesDLModel.DIAGRAM_OBJECT, "sequenceNumber", "xPosition", "yPosition"), true);
-        diagramObjectPointProperties.setResourceNames(Arrays.asList(CgmesDLModel.DIAGRAM_OBJECT));
+        diagramObjectPointProperties.setResourceNames(List.of(CgmesDLModel.DIAGRAM_OBJECT));
         diagramObjectPointProperties.put(CgmesDLModel.DIAGRAM_OBJECT, diagramObjectId);
-        diagramObjectPointProperties.put("sequenceNumber", Integer.toString(point.getSeq()));
-        diagramObjectPointProperties.put("xPosition", Double.toString(point.getX()));
-        diagramObjectPointProperties.put("yPosition", Double.toString(point.getY()));
+        diagramObjectPointProperties.put("sequenceNumber", Integer.toString(point.seq()));
+        diagramObjectPointProperties.put("xPosition", Double.toString(point.x()));
+        diagramObjectPointProperties.put("yPosition", Double.toString(point.y()));
         tripleStore.add(context.getDlContext(), CgmesNamespace.CIM_16_NAMESPACE, "DiagramObjectPoint", diagramObjectPointProperties);
     }
 
     protected String addDiagramObjectStyle(String name) {
-        PropertyBag diagramObjectStyleProperties = new PropertyBag(Arrays.asList(CgmesDLModel.IDENTIFIED_OBJECT_NAME), true);
-        diagramObjectStyleProperties.setClassPropertyNames(Arrays.asList(CgmesDLModel.IDENTIFIED_OBJECT_NAME));
+        PropertyBag diagramObjectStyleProperties = new PropertyBag(List.of(CgmesDLModel.IDENTIFIED_OBJECT_NAME), true);
+        diagramObjectStyleProperties.setClassPropertyNames(List.of(CgmesDLModel.IDENTIFIED_OBJECT_NAME));
         diagramObjectStyleProperties.put(CgmesDLModel.IDENTIFIED_OBJECT_NAME, name);
         return tripleStore.add(context.getDlContext(), CgmesNamespace.CIM_16_NAMESPACE, CgmesDLModel.DIAGRAM_OBJECT_STYLE, diagramObjectStyleProperties);
     }
 
     protected String addDiagramObjectStyle(TopologyKind topologyKind) {
-        switch (topologyKind) {
-            case NODE_BREAKER:
+        return switch (topologyKind) {
+            case NODE_BREAKER -> {
                 if (context.hasNodeBreakerDiagramObjectStyleId()) {
-                    return context.getNodeBreakerDiagramObjectStyleId();
+                    yield context.getNodeBreakerDiagramObjectStyleId();
                 }
                 String nodeBreakerDiagramObjectStyleId = addDiagramObjectStyle("node-breaker");
                 context.setNodeBreakerDiagramObjectStyleId(nodeBreakerDiagramObjectStyleId);
-                return nodeBreakerDiagramObjectStyleId;
-            case BUS_BREAKER:
+                yield nodeBreakerDiagramObjectStyleId;
+            }
+            case BUS_BREAKER -> {
                 if (context.hasBusBranchDiagramObjectStyleId()) {
-                    return context.getBusBranchDiagramObjectStyleId();
+                    yield context.getBusBranchDiagramObjectStyleId();
                 }
                 String busBranchdiagramObjectStyleId = addDiagramObjectStyle("bus-branch");
                 context.setBusBranchDiagramObjectStyleId(busBranchdiagramObjectStyleId);
-                return busBranchdiagramObjectStyleId;
-            default:
-                throw new AssertionError("Unexpected topology kind: " + topologyKind);
-        }
+                yield busBranchdiagramObjectStyleId;
+            }
+        };
     }
 
     protected void addTerminalData(String id, String name, int side, List<DiagramPoint> terminalPoints, String diagramObjectStyleId, String diagramId) {
@@ -99,7 +97,7 @@ public abstract class AbstractDiagramDataExporter {
             return terminals.get(terminalKey);
         }
         LOG.warn("Cannot find terminal id of equipment {} side {} in triple store: creating new id", equipmentId, terminalSide);
-        return "_" + UUID.randomUUID().toString();
+        return "_" + UUID.randomUUID();
     }
 
     protected String getTerminalName(String equipmentName, int terminalSide) {
